remove unused code cell from insert_client notebook and update binary files

--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,19 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ambiente: test\n",
-      "API_TOKEN: 655:a59d38d5ec6a664824e6f7ddbc261161e62f25d303a19d890b037f86d15a895b\n",
-      "BASE_URL: https://ixcteste.veloo.com.br\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from src.utils import carregar_tabela_excel\n",
@@ -59,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20250319_221009'"
+       "'20250319_230411'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +145,7 @@
        "      <td>SN</td>\n",
        "      <td>Centro</td>\n",
        "      <td>57830-000</td>\n",
-       "      <td>117695</td>\n",
+       "      <td>117696</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -171,13 +161,13 @@
        "0  014.846.390-81  Isento        35     1659  Vila São Sebastião   \n",
        "\n",
        "           Complemento Numero  Bairro        Cep idClienteIXC statusInsercao  \\\n",
-       "0  Próximo ao cacimbão     SN  Centro  57830-000       117695        sucesso   \n",
+       "0  Próximo ao cacimbão     SN  Centro  57830-000       117696        sucesso   \n",
        "\n",
        "                                          logRetorno  \n",
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +246,7 @@
        "      <td>25</td>\n",
        "      <td>teste1@radios.com</td>\n",
        "      <td>peixoto</td>\n",
-       "      <td>117695</td>\n",
+       "      <td>117696</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -273,10 +263,10 @@
        "0  Próximo ao cacimbão     SN  Centro  57830-000       6824              25   \n",
        "\n",
        "               Login    Senha idClienteIXC  \n",
-       "0  teste1@radios.com  peixoto       117695  "
+       "0  teste1@radios.com  peixoto       117696  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,17 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Limitando o DF\n",
-    "df = df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +404,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>117695</td>\n",
+       "      <td>117696</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
        "      <td>Vila São Sebastião</td>\n",
@@ -442,13 +422,13 @@
       ],
       "text/plain": [
        "  idClienteIXC filial_id idCidade            Endereco Numero  Bairro  \\\n",
-       "0       117695        35     1659  Vila São Sebastião     SN  Centro   \n",
+       "0       117696        35     1659  Vila São Sebastião     SN  Centro   \n",
        "\n",
        "         Cep idPlanoIXC idVencimentoIXC              Login    Senha  \n",
        "0  57830-000       6824              25  teste1@radios.com  peixoto  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,12 +443,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Adiciona o Nome Plano ao dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# Carregando pacote que estao fora de /transform\n",
+    "path_raiz = os.path.abspath(os.path.join(\"..\", \"..\"))\n",
+    "sys.path.append(path_raiz)\n",
+    "\n",
+    "from config.database_select import executa_query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cria função somente para isso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para adicionar a coluna 'nomePlano' ao DataFrame\n",
+    "def add_nomePlano_to_df(df):\n",
+    "    df = df.copy()  # Cria uma cópia do DataFrame para evitar problemas com slicing\n",
+    "    nomePlano_list = []\n",
+    "    for _, row in df.iterrows():\n",
+    "        idPlanoIXC = row['idPlanoIXC']\n",
+    "        # Monta a query utilizando o idPlanoIXC da linha\n",
+    "        query = f\"\"\"\t\n",
+    "        SELECT\n",
+    "            vc.nome\n",
+    "        FROM\n",
+    "            vd_contratos vc \n",
+    "        WHERE vc.id = {idPlanoIXC}\n",
+    "        \"\"\"\n",
+    "        resultado = executa_query(query)\n",
+    "        # Caso a query retorne resultados, usamos o primeiro valor\n",
+    "        if resultado and len(resultado) > 0:\n",
+    "            id_plano = resultado[0][0]\n",
+    "        else:\n",
+    "            id_plano = None\n",
+    "        nomePlano_list.append(id_plano)\n",
+    "    \n",
+    "    # Cria a nova coluna 'nomePlano' no DataFrame utilizando .loc\n",
+    "    df.loc[:, 'nomePlano'] = nomePlano_list\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idClienteIXC</th>\n",
+       "      <th>filial_id</th>\n",
+       "      <th>idCidade</th>\n",
+       "      <th>Endereco</th>\n",
+       "      <th>Numero</th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Cep</th>\n",
+       "      <th>idPlanoIXC</th>\n",
+       "      <th>idVencimentoIXC</th>\n",
+       "      <th>Login</th>\n",
+       "      <th>Senha</th>\n",
+       "      <th>nomePlano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>117696</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Vila São Sebastião</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>6824</td>\n",
+       "      <td>25</td>\n",
+       "      <td>teste1@radios.com</td>\n",
+       "      <td>peixoto</td>\n",
+       "      <td>100MB_SPEEDY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  idClienteIXC filial_id idCidade            Endereco Numero  Bairro  \\\n",
+       "0       117696        35     1659  Vila São Sebastião     SN  Centro   \n",
+       "\n",
+       "         Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
+       "0  57830-000       6824              25  teste1@radios.com  peixoto   \n",
+       "\n",
+       "      nomePlano  \n",
+       "0  100MB_SPEEDY  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = add_nomePlano_to_df(df)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Insere Contrato"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +600,7 @@
      "output_type": "stream",
      "text": [
       "200 OK\n",
-      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"154045\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"P\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117695\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"2025-03-19\"}]}'\n"
+      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"154047\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"P\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117696\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"2025-03-19\"}]}'\n"
      ]
     }
    ],
@@ -502,6 +626,7 @@
     "    numero = row[\"Numero\"]\n",
     "    bairro = row[\"Bairro\"]\n",
     "    cep = row[\"Cep\"]\n",
+    "    contrato = row[\"nomePlano\"]  # mapeia para o nome do plano\n",
     "\n",
     "    # Parâmetros fixos conforme o exemplo de chamada:\n",
     "    tipo = \"I\"\n",
@@ -509,7 +634,6 @@
     "    id_vendedor = \"1\"             # Id vendedor (fixo, conforme o exemplo)\n",
     "    data_base_financeira = \"01/01/2024\"  # Data base financeira (pode ser fixo ou calculado conforme sua regra)\n",
     "    descricao_aux_plano_venda = \"IMPORTAÇÃO\"       # Tipo de contrato (fixo)\n",
-    "    contrato = \"IMPORTAÇÃO\"       # Descricao Plano - Atualizar no Update\n",
     "    id_carteira_cobranca = \"67\"   # Id da carteira de cobrança (fixo)\n",
     "\n",
     "    # Chamamos a função inserir_contrato com os parâmetros mapeados:\n",
@@ -561,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,19 +694,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m\n",
-      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idClienteIXC</th>\n",
+       "      <th>filial_id</th>\n",
+       "      <th>idCidade</th>\n",
+       "      <th>Endereco</th>\n",
+       "      <th>Numero</th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Cep</th>\n",
+       "      <th>idPlanoIXC</th>\n",
+       "      <th>idVencimentoIXC</th>\n",
+       "      <th>Login</th>\n",
+       "      <th>Senha</th>\n",
+       "      <th>nomePlano</th>\n",
+       "      <th>idContratoIXC</th>\n",
+       "      <th>statusInsercao</th>\n",
+       "      <th>logRetorno</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>117696</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Vila São Sebastião</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>6824</td>\n",
+       "      <td>25</td>\n",
+       "      <td>teste1@radios.com</td>\n",
+       "      <td>peixoto</td>\n",
+       "      <td>100MB_SPEEDY</td>\n",
+       "      <td>154047</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  idClienteIXC filial_id idCidade            Endereco Numero  Bairro  \\\n",
+       "0       117696        35     1659  Vila São Sebastião     SN  Centro   \n",
+       "\n",
+       "         Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
+       "0  57830-000       6824              25  teste1@radios.com  peixoto   \n",
+       "\n",
+       "      nomePlano idContratoIXC statusInsercao  \\\n",
+       "0  100MB_SPEEDY        154047        sucesso   \n",
+       "\n",
+       "                                          logRetorno  \n",
+       "0  {'type': 'success', 'message': 'Registro inser...  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
