--- a/src/transform/insert_login.ipynb
+++ b/src/transform/insert_login.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20250319_225210'"
+       "'20250319_230627'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -121,6 +121,7 @@
        "      <th>idVencimentoIXC</th>\n",
        "      <th>Login</th>\n",
        "      <th>Senha</th>\n",
+       "      <th>nomePlano</th>\n",
        "      <th>idContratoIXC</th>\n",
        "      <th>statusInsercao</th>\n",
        "      <th>logRetorno</th>\n",
@@ -130,7 +131,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>117695</td>\n",
+       "      <td>117696</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
        "      <td>Vila São Sebastião</td>\n",
@@ -141,7 +142,8 @@
        "      <td>25</td>\n",
        "      <td>teste1@radios.com</td>\n",
        "      <td>peixoto</td>\n",
-       "      <td>154045</td>\n",
+       "      <td>100MB_SPEEDY</td>\n",
+       "      <td>154047</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -151,19 +153,19 @@
       ],
       "text/plain": [
        "  Unnamed: 0 idClienteIXC filial_id idCidade            Endereco Numero  \\\n",
-       "0          0       117695        35     1659  Vila São Sebastião     SN   \n",
+       "0          0       117696        35     1659  Vila São Sebastião     SN   \n",
        "\n",
        "   Bairro        Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
        "0  Centro  57830-000       6824              25  teste1@radios.com  peixoto   \n",
        "\n",
-       "  idContratoIXC statusInsercao  \\\n",
-       "0        154045        sucesso   \n",
+       "      nomePlano idContratoIXC statusInsercao  \\\n",
+       "0  100MB_SPEEDY        154047        sucesso   \n",
        "\n",
        "                                          logRetorno  \n",
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -195,6 +197,7 @@
       "idVencimentoIXC    0\n",
       "Login              0\n",
       "Senha              0\n",
+      "nomePlano          0\n",
       "idContratoIXC      0\n",
       "statusInsercao     0\n",
       "logRetorno         0\n",
@@ -215,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -308,6 +311,7 @@
        "      <th>idVencimentoIXC</th>\n",
        "      <th>Login</th>\n",
        "      <th>Senha</th>\n",
+       "      <th>nomePlano</th>\n",
        "      <th>idContratoIXC</th>\n",
        "      <th>statusInsercao</th>\n",
        "      <th>logRetorno</th>\n",
@@ -318,7 +322,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>117695</td>\n",
+       "      <td>117696</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
        "      <td>Vila São Sebastião</td>\n",
@@ -329,7 +333,8 @@
        "      <td>25</td>\n",
        "      <td>teste1@radios.com</td>\n",
        "      <td>peixoto</td>\n",
-       "      <td>154045</td>\n",
+       "      <td>100MB_SPEEDY</td>\n",
+       "      <td>154047</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "      <td>6668</td>\n",
@@ -340,19 +345,19 @@
       ],
       "text/plain": [
        "  Unnamed: 0 idClienteIXC filial_id idCidade            Endereco Numero  \\\n",
-       "0          0       117695        35     1659  Vila São Sebastião     SN   \n",
+       "0          0       117696        35     1659  Vila São Sebastião     SN   \n",
        "\n",
        "   Bairro        Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
        "0  Centro  57830-000       6824              25  teste1@radios.com  peixoto   \n",
        "\n",
-       "  idContratoIXC statusInsercao  \\\n",
-       "0        154045        sucesso   \n",
+       "      nomePlano idContratoIXC statusInsercao  \\\n",
+       "0  100MB_SPEEDY        154047        sucesso   \n",
        "\n",
        "                                          logRetorno  idGrupo  \n",
        "0  {'type': 'success', 'message': 'Registro inser...     6668  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,18 +398,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "inserir_radusuarios() got an unexpected keyword argument 'cep'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[82]\u001b[39m\u001b[32m, line 26\u001b[39m\n\u001b[32m     22\u001b[39m cep = row[\u001b[33m\"\u001b[39m\u001b[33mCep\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# Se necessário, pode-se ajustar senha_md5 ou outros parâmetros, mas aqui usaremos os defaults da função.\u001b[39;00m\n\u001b[32m     24\u001b[39m \n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Chama a função inserir_radusuarios com os parâmetros mapeados\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m response = \u001b[43minserir_radusuarios\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     27\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_cliente\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_cliente\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     28\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_contrato\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_contrato\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     29\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_grupo\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_grupo\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     30\u001b[39m \u001b[43m    \u001b[49m\u001b[43mlogin\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlogin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     31\u001b[39m \u001b[43m    \u001b[49m\u001b[43msenha\u001b[49m\u001b[43m=\u001b[49m\u001b[43msenha\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     32\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcep\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcep\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     33\u001b[39m \u001b[43m    \u001b[49m\u001b[43mendereco\u001b[49m\u001b[43m=\u001b[49m\u001b[43mendereco\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     34\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnumero\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnumero\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     35\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbairro\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbairro\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcidade\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcidade\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     37\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# Os demais parâmetros serão utilizados com seus valores default definidos na função.\u001b[39;49;00m\n\u001b[32m     38\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     40\u001b[39m status_code = response.status_code\n\u001b[32m     41\u001b[39m content = response.content  \u001b[38;5;66;03m# bytes\u001b[39;00m\n",
-      "\u001b[31mTypeError\u001b[39m: inserir_radusuarios() got an unexpected keyword argument 'cep'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 OK\n",
+      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"181284\",\"atualiza_campos\":[{\"tipo\":\"s\",\"campo\":\"online\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117696\"}]}'\n"
      ]
     }
    ],
@@ -457,12 +459,12 @@
     "    if status_code == 200 and json_resp.get(\"type\") == \"success\":\n",
     "        # Sucesso: captura o \"id\" do usuário inserido\n",
     "        usuario_id = json_resp.get(\"id\")  # Exemplo: \"154036\"\n",
-    "        df_contrato.at[idx, \"idRadusuarios\"] = usuario_id\n",
+    "        df_contrato.at[idx, \"idRadUsuarios\"] = usuario_id\n",
     "        df_contrato.at[idx, \"statusInsercaoRad\"] = \"sucesso\"\n",
     "        df_contrato.at[idx, \"logRetornoRad\"] = json_resp\n",
     "    else:\n",
-    "        # Em caso de falha: registra os logs e garante que idRadusuarios fique como None\n",
-    "        df_contrato.at[idx, \"idRadusuarios\"] = None\n",
+    "        # Em caso de falha: registra os logs e garante que idRadUsuarios fique como None\n",
+    "        df_contrato.at[idx, \"idRadUsuarios\"] = None\n",
     "        df_contrato.at[idx, \"statusInsercaoRad\"] = \"falha\"\n",
     "        df_contrato.at[idx, \"logRetornoRad\"] = json_resp\n"
    ]
@@ -476,7 +478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove colunas logRetorno e idGrupo\n",
+    "df_contrato.drop(columns=[\"logRetorno\", \"idGrupo\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -521,11 +533,10 @@
        "      <th>idVencimentoIXC</th>\n",
        "      <th>Login</th>\n",
        "      <th>Senha</th>\n",
+       "      <th>nomePlano</th>\n",
        "      <th>idContratoIXC</th>\n",
        "      <th>statusInsercao</th>\n",
-       "      <th>logRetorno</th>\n",
-       "      <th>idGrupo</th>\n",
-       "      <th>idRadusuarios</th>\n",
+       "      <th>idRadUsuarios</th>\n",
        "      <th>statusInsercaoRad</th>\n",
        "      <th>logRetornoRad</th>\n",
        "    </tr>\n",
@@ -534,7 +545,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>117695</td>\n",
+       "      <td>117696</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
        "      <td>Vila São Sebastião</td>\n",
@@ -545,11 +556,10 @@
        "      <td>25</td>\n",
        "      <td>teste1@radios.com</td>\n",
        "      <td>peixoto</td>\n",
-       "      <td>154045</td>\n",
+       "      <td>100MB_SPEEDY</td>\n",
+       "      <td>154047</td>\n",
        "      <td>sucesso</td>\n",
-       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
-       "      <td>6668</td>\n",
-       "      <td>181280</td>\n",
+       "      <td>181284</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -559,22 +569,19 @@
       ],
       "text/plain": [
        "  Unnamed: 0 idClienteIXC filial_id idCidade            Endereco Numero  \\\n",
-       "0          0       117695        35     1659  Vila São Sebastião     SN   \n",
+       "0          0       117696        35     1659  Vila São Sebastião     SN   \n",
        "\n",
        "   Bairro        Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
        "0  Centro  57830-000       6824              25  teste1@radios.com  peixoto   \n",
        "\n",
-       "  idContratoIXC statusInsercao  \\\n",
-       "0        154045        sucesso   \n",
+       "      nomePlano idContratoIXC statusInsercao idRadUsuarios statusInsercaoRad  \\\n",
+       "0  100MB_SPEEDY        154047        sucesso        181284           sucesso   \n",
        "\n",
-       "                                          logRetorno  idGrupo idRadusuarios  \\\n",
-       "0  {'type': 'success', 'message': 'Registro inser...     6668        181280   \n",
-       "\n",
-       "  statusInsercaoRad                                      logRetornoRad  \n",
-       "0           sucesso  {'type': 'success', 'message': 'Registro inser...  "
+       "                                       logRetornoRad  \n",
+       "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
